# SCSC

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
.claude/rules/: cuda.md
archive/jetson-phase7/: CMakeLists.txt
archive/jetson-phase7/cuda/: efe_planner.cuh  particle_filter.cuh
archive/jetson-phase7/include/: body_config.h  types.h
archive/jetson-phase7/src/: face_detect.h  logger.h
docs/: architecture-decisions.md  m1b-kernel-spec.md  scsc-phase7-8plus-handoff.md  scsc-portfolio.pptx  scsc-pr-phase1-7.pptx
jetson/config/: aif_params.json  servo_map.json
jetson/cuda/: aif_engine.h  gen_model.cuh  primitives.cuh
jetson/include/: spsc_queue.h
jetson/src/: camera.h  main_phase7.cpp  observation.h  safety.h  servo_cmd.h
src/: gen_model.py  reference.py  test_reference.py
src/cuda/: active_inference_kernel.cu  active_inference_kernel.cuh  bandwidth_test.cu  gen_model.cuh  main.cu  naive_reduction.cu  shared_memory_reduction.cu  shared_memory_reduction_2.cu  shared_reduction_gsl.cu  test_harness.cu  warp_shuffle_reduction.cu
teensy/: platformio.ini
teensy/src/: main.ino  pwm_servo.h  safety_wd.h  servo_sched.h  uart_host.h
tests/test_vectors/: metadata.json
